sfSandBoxCode/force-app/main/default/objects/Windrow_Batch__c/Windrow_Batch__c.object-meta.xml
<CustomObject>
    <description>Windrow Batches to be added to the Windrows</description>
    <label>Windrow Batch</label>
    <nameField>
        <label>Windrow Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Windrow Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>