sfSandBoxCode/force-app/main/default/objects/Windrow_Batch__c/fields/FLI_Waste_Quantity_kgs__c.field-meta.xml
<CustomField>
    <fullName>FLI_Waste_Quantity_kgs__c</fullName>
    <label>FLI Waste Quantity(kgs)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>