sfSandBoxCode/force-app/main/default/objects/Windrow_Batch__c/fields/Recipe__c.field-meta.xml
<CustomField>
    <fullName>Recipe__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recipe</label>
    <referenceTo>Recipe__c</referenceTo>
    <relationshipLabel>Windrow Batches</relationshipLabel>
    <relationshipName>Windrow_Batches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>