sfSandBoxCode/force-app/main/default/objects/Windrow_Batch__c/fields/Windrow__c.field-meta.xml
<CustomField>
    <fullName>Windrow__c</fullName>
    <description>Windrow Number</description>
    <label>Windrow</label>
    <referenceTo>Windrow__c</referenceTo>
    <relationshipLabel>Windrow Batches</relationshipLabel>
    <relationshipName>Windrow_Batches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>