sfSandBoxCode/force-app/main/default/objects/Windrow_Batch__c/fields/Windrow_Batch_Date__c.field-meta.xml
<CustomField>
    <fullName>Windrow_Batch_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date the Windrow Batch was added</description>
    <inlineHelpText>Date the Windrow Batch was added</inlineHelpText>
    <label>Windrow Batch Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>