sfSandBoxCode/force-app/main/default/objects/Windrow_Batch__c/recordTypes/Windrow_Batch.recordType-meta.xml
<RecordType>
    <fullName>Windrow_Batch</fullName>
    <active>true</active>
    <label>Windrow Batch</label>
</RecordType>